# softgripper_ws

gripper_ros/: gripper_ros.ino
softgripper_control/: CMakeLists.txt  package.xml
softgripper_control/src/scripts/: softgripper_control.py
